decision: many-many case only sankey, reflexive case both sankey and chord; implement case for reflexive case sankey diagram