@@ -89,11 +89,11 @@ public class InputController {
         table.put("option", options);
       }
       case MANY_MANY_RELATIONSHIP -> {
-        options = Arrays.asList("Sankey Diagram", "Chord Diagram");
+        options = List.of("Chord Diagram");
         table.put("option", options);
       }
       case REFLEXIVE_RELATIONSHIP -> {
-        options = List.of("Chord Diagram");
+        options = Arrays.asList("Sankey Diagram", "Chord Diagram");
         table.put("option", options);
       }
       case UNKNOWN -> {
